# sibyl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  activate.sh  pyproject.toml  pytest.ini  requirements.txt  rest_api_requirements.txt  setup.sh  sibyl_config.yml  trivy.yaml
config/routing/: compression.yaml
config/workspaces/: agentic_research.yaml  algorithmic_mcp_tier1.yaml  algorithmic_mcp_tier2a.yaml  algorithmic_mcp_tier2b.yaml  algorithmic_mcp_tier3.yaml  cloud_rag.yaml  code_assistant.yaml  data_connectors_example.yaml  evaluation_pipeline.yaml  example_local.yaml  hero_ast_cross_server.yaml  hero_chunkhound_rag.yaml  hero_graphiti_networkx.yaml  local_dev.yaml  local_docs_duckdb.yaml  mcp_crawl4ai.yaml  mcp_locallama.yaml  mcp_raglite.yaml  pgvector_example.yaml  prod_web_research.yaml  qdrant_example.yaml  router_dev_assistant.yaml  router_rag_helper.yaml  sql_docs_pgvector.yaml
devops/: DEPLOYMENT.md  OBSERVABILITY.md  README.md  TROUBLESHOOTING.md
devops/config/: nginx.conf  prometheus.yml  validate_env.py
devops/config/ssl/: README.md
devops/docker/: .env.dev.example  .env.example  .env.local-workspace  .env.multi-workspace-full  .env.prod-workspace  .env.prod.example  Dockerfile  README_MULTI_WORKSPACE.md  docker-compose.local.yml  docker-compose.yml
devops/observability/fluent-bit/: fluent-bit.conf
devops/observability/loki/: loki-config.yaml
devops/observability/prometheus/: alerts.yml  prometheus.yml
devops/scripts/: backup-state.sh  check_imports.sh  cleanup.sh  detect_circular_imports.py  generate_tool_catalog.py  health-check.sh  import_smoke_test.sh  logs.sh  restore-state.sh  rotate-logs.sh  rotate_api_keys.sh  run_tests.sh  start-dev.sh  start-prod.sh  update.sh  validate_install.py  validate_plugin_registration.py
docs/: FAQ.md  GLOSSARY.md  README.md  getting-started.md  installation.md  quick-start.md
docs/advanced/: README.md
docs/api/: README.md
docs/architecture/: core-concepts.md  data-flow.md  design-patterns.md  overview.md
docs/development/: code-style.md  testing-guide.md
docs/examples/: README.md  advanced-rag.md  agent-workflow.md  basic-rag.md  custom-technique.md  mcp-integration.md  sql-agent.md
docs/extending/: developer-guide.md
docs/mcp/: client-integration.md  overview.md  rest-api.md  server-setup.md  tool-exposure.md
docs/migrations/: README.md
docs/operations/: deployment.md  observability.md  performance-tuning.md  security.md  troubleshooting.md
docs/plugins/: README.md
docs/techniques/: ai-generation.md  catalog.md  custom-techniques.md  infrastructure.md  rag-pipeline.md  workflow-orchestration.md
docs/workspaces/: best-practices.md  configuration.md  mcp-tools.md  overview.md  providers.md  shops-and-techniques.md
examples/: README.md  demo_sibyl_runner.py  observability_demo.py  runtime_hardening_demo.py  runtime_hardening_demo_standalone.py
examples/basic_web_research/: README.md  example_workspace.yaml  run_example.py
examples/companies/brightops_agency/: README.md
examples/companies/northwind_analytics/: README.md
examples/companies/riverbank_finance/: README.md
examples/companies/vertex_foundry/: README.md
examples/extensibility/: example_tools.py
examples/extensions/custom_provider/: README.md  echo_llm.py  run_example.py  workspace.yaml
examples/extensions/custom_technique/: README.md  run_example.py  simple_reranker.py  workspace.yaml
examples/golden_path/: README.md  run_web_research.py  validate_workspace.py
examples/http_client/: README.md  call_pipeline.py  call_pipeline.sh
examples/pipelines/: loop_reasoning_pipeline.yaml  parallel_analysis_pipeline.yaml  solver_with_fallback_pipeline.yaml
examples/plugins/: claude_code_example.http  custom_plugin_example.py  demo_sibyl_runner.py  opencode_example.http
examples/shared/: README.md  bench_examples.py
examples/shared/benchmarks/: CI_INTEGRATION.md  README.md  baseline.json  ci_baseline.json
examples/shared/datasets/: README.md
examples/shared/mcp/: README.md  docker-compose.yaml  mcp_requirements.md
examples/shared/tooling/: README.md  bench.py  run_example.py  test_runner.py
plugins/: __init__.py
plugins/claude_code_router/: __init__.py  router_config.yaml  router_engine.py  router_types.py
plugins/common/: __init__.py  sibyl_runner.py
plugins/custom_template/: __init__.py  custom_plugin_template.py  template_config.yaml
plugins/openai_gateway/: __init__.py  openai_sibyl_tools.py  tools_mapping.yaml
plugins/opencode/: __init__.py  opencode_sibyl_adapter.py  opencode_sibyl_example.yaml
sibyl/: __init__.py  cli.py  sibyl.py
sibyl/agents/: DEVELOPER_GUIDE.md  __init__.py  protocol.py  types.py
sibyl/agents/base/: __init__.py  agent.py
sibyl/agents/factory/: __init__.py  agent_factory.py
sibyl/agents/implementations/: __init__.py  search.py
sibyl/agents/tools/: __init__.py  catalog.py
sibyl/api/: __init__.py  health.py
sibyl/cli/: scaffold.py
sibyl/config/: README.md  __init__.py  core_defaults.yaml  loader.py  protocol.py  schema.yaml  sources.py  validator.py  workspace_loader.py  workspace_schema.py
sibyl/core/: feature_flags.py
sibyl/core/artifacts/: __init__.py  ast.py  chunk.py  external_handle.py  graph.py  graph_metrics.py  job_handle.py  pattern.py  registry.py  session_handle.py  solver.py  (+1 more)
sibyl/framework/: __init__.py  container.py  errors.py
sibyl/observability/: __init__.py  logging.py  resources.py
sibyl/runtime/: __init__.py  convenience.py
sibyl/server/: __init__.py  config.py  http_server.py  http_transport.py  main.py  mcp_server.py  openai_facade.py  rest_api.py  schemas.py  shared_state.py  stdio_transport.py
sibyl/shops/: __init__.py  agents.py  ai_generation.py  infrastructure.py  rag.py  workflow.py
sibyl/techniques/: __init__.py  config_cascade.py  loader.py  protocols.py  registry.py
sibyl/utils/: __init__.py  math.py
sibyl/workspace/: __init__.py  loader.py  schema.py
specialists/training_toolkit/: README.md
(+898 files in other folders)
