# =============================================================================
# pyproject.toml - Python Project Configuration
# =============================================================================
# Central configuration for build system, dependencies, and tooling.
# =============================================================================

[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sibyl-mcp"
dynamic = ["version"]
description = "Sibyl: A framework for building AI-powered applications around structured workspaces and pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sibyl Project", email = "sibyl@example.org"}
]
maintainers = [
    {name = "Sibyl Project", email = "sibyl@example.org"}
]
keywords = [
    "sibyl",
    "ai-assistant",
    "mcp",
    "model-context-protocol",
    "llm",
    "claude",
    "templates",
    "knowledge-base",
    "semantic-search",
    "quality-control",
    "pattern-learning",
    "python",
    "terraform",
    "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "mcp>=0.1.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "networkx>=3.2.1",
    "asyncio-mqtt>=0.16.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "GitPython>=3.1.40",
    "scikit-learn>=1.3.0",
    "sqlfluff>=2.3.0",
    "radon>=6.0.0",
    "Jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/sibyl-project/sibyl"
Documentation = "https://github.com/sibyl-project/sibyl/tree/main/docs"
Repository = "https://github.com/sibyl-project/sibyl"
Issues = "https://github.com/sibyl-project/sibyl/issues"
Changelog = "https://github.com/sibyl-project/sibyl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.92.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.3.3",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
vector = [
    "fastembed>=0.2.0",
    "faiss-cpu>=1.7.4",
]
rest = [
    "fastapi>=0.100.0",
]

[project.scripts]
sibyl-server = "sibyl.server.mcp_server:main"  # New entry point
sibyl-mcp = "sibyl.server.mcp_server:main"  # Workspace MCP server
sibyl = "sibyl.cli:main"  # Main CLI entry point

# =============================================================================
# Setuptools SCM Configuration (Version Management)
# =============================================================================
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.1.0"  # Fallback when no git tags

# =============================================================================
# UV Configuration (Dependency Management)
# =============================================================================
[tool.uv]
dev-dependencies = []
package = true

# =============================================================================
# Ruff Configuration (Linter + Formatter)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# ============================================================================
# v0.1.0 RELAXED RULES - Pragmatic approach for initial release
# TODO: Re-enable full rule set for v0.2.0 after API stabilizes and tests exist
# ============================================================================

# CURRENTLY ENABLED (v0.1.0):
select = [
    "F",     # Pyflakes - critical errors (undefined names, unused imports)
    "E9",    # Pycodestyle - syntax errors only (E901-E906)
    "I",     # isort - import sorting (auto-fixable)
]

# TEMPORARILY DISABLED - Will re-enable incrementally in v0.2.0+:
# Full rule set commented out to reduce noise during initial development.
# Rationale: No tests yet, API not stable, urgent timeline for v0.1.0 release.
#
# "E",     # pycodestyle errors (style issues)
# "W",     # pycodestyle warnings (style issues)
# "N",     # pep8-naming (naming conventions)
# "UP",    # pyupgrade (modern Python syntax)
# "ANN",   # flake8-annotations (type hints) - Very strict, generates many issues
# "ASYNC", # flake8-async (async patterns)
# "S",     # flake8-bandit (security) - Re-enable for v0.2.0
# "B",     # flake8-bugbear (common bugs)
# "A",     # flake8-builtins (catch shadowing)
# "C4",    # flake8-comprehensions (list/dict comprehensions)
# "DTZ",   # flake8-datetimez (timezone aware datetimes)
# "T10",   # flake8-debugger (check for debugger statements)
# "EM",    # flake8-errmsg (error message formatting)
# "ISC",   # flake8-implicit-str-concat (implicit string concat)
# "ICN",   # flake8-import-conventions (import naming)
# "G",     # flake8-logging-format (logging best practices)
# "PIE",   # flake8-pie (misc lints)
# "T20",   # flake8-print (disallow print statements)
# "PYI",   # flake8-pyi (stub files)
# "PT",    # flake8-pytest-style (pytest best practices)
# "Q",     # flake8-quotes (quote style consistency)
# "RSE",   # flake8-raise (exception raising)
# "RET",   # flake8-return (return statements)
# "SLF",   # flake8-self (private member access)
# "SIM",   # flake8-simplify (code simplification)
# "TID",   # flake8-tidy-imports (import organization)
# "TCH",   # flake8-type-checking (TYPE_CHECKING blocks)
# "ARG",   # flake8-unused-arguments (unused args)
# "PTH",   # flake8-use-pathlib (use pathlib over os.path)
# "PD",    # pandas-vet (pandas best practices)
# "PGH",   # pygrep-hooks (misc text checks)
# "PL",    # pylint (comprehensive linting)
# "TRY",   # tryceratops (exception handling)
# "NPY",   # numpy-specific rules
# "RUF",   # ruff-specific rules

# Rules to ignore
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function call in argument defaults (FastAPI dependency injection)
    "S101",    # Use of assert (allowed in tests via per-file-ignores)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# MIGRATION: Temporarily removed F401 exemption to catch import issues during reorg
# Re-enable after migration: "__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
"migration_map.py" = ["F401"]  # Migration map has intentional unused imports

[tool.ruff.lint.isort]
known-first-party = ["sibyl"]

# =============================================================================
# Black Configuration (Code Formatter)
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
  | \.eggs
)/
'''

# =============================================================================
# Mypy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.11"
# Strict mode enabled
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "fastapi.*",
    "duckdb.*",
    "pydantic.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration (Testing)
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"  # Enable pytest-asyncio auto mode for async tests

# Pytest options
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=sibyl",  # Updated for Sibyl package
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=80",  # Lowered from 95 to realistic target
    "--tb=short",
    "--maxfail=5",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "security: Security tests",
    "load: Load tests",
    "chaos: Chaos engineering tests",
]

# Test timeout
timeout = 300

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["sibyl"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit Configuration (Security Linter)
# =============================================================================
[tool.bandit]
exclude_dirs = ["/tests/", "/build/", "/dist/", "/.venv/", "/venv/"]
skips = ["B404", "B603"]

# =============================================================================
# Build System
# =============================================================================
[tool.setuptools.packages.find]
where = ["."]
include = ["sibyl*"]
exclude = ["tests*", "docs*", "examples*"]
